Sun Oct  5 23:18:46 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS added information about CVS tarballs.
	
Sun Oct 05 18:41:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in:
	- test for other socket functions
	- add "-ansi -Wno-long-long" if gcc for more warnings
	* include/tds.h: small fix for C98 compiler
	* src/apps/Makefile.am: try to fix Mac OS X problem
	* src/odbc/odbc_util.c src/odbc/odbc_util.h:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- merged patch from ML for GUID parameters
	- start supporting SQL_C_DEFAULT
	* src/tds/login.c: fix possible 64 bit problem
	* src/tds/token.c: fix "undefined strdup" under RH9
	* src/tds/unittests/.cvsignore src/tds/unittests/Makefile.am:
	* src/tds/unittests/utf8_1.c(added):
	- added first utf8 test (not finished)

Tue Sep 30 21:21:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: trick for "make distcheck"

Tue Sep 30 21:04:48 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in include/tds.h src/odbc/Makefile.am:
	* src/odbc/unittests/Makefile.am:
	- fix problem with odbc autodetect
	* src/tds/config.c src/tds/mem.c src/tds/token.c:
	* src/tds/unittests/convert.c:
	- indent(1)

Tue Sep 30 17:01:57 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/tds/config.c:
	- use inet_ntoa_r if available
	* src/tds/iconv.c: fix for SWAPBYTE flag
	* src/tds/mem.c: fix bus error, unaligned data
	* src/tds/threadsafe.c: some fixes
	* src/tds/token.c: remove warning compiled under big endian machine	
	* src/tds/unittests/convert.c: fill precision/scale members

Sun Sep 28 16:55:58 PDT 2003	Peter Deacon <peterd@iea-software.com>
	* src/tds/config.c src/tds/login.c src/tds/token.c:
	* src/odbc/odbc.c include/tds.h src/tds/read.c:
	- fix unchecked memory allocation
	- replace bad assert
	- add missing TDS_IS_SOCKET_INVALID macro

Fri Sep 25 23:10:36 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update from ML and other