@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.106 2003/10/05 16:46:41 freddy77 Exp $
+dnl $Id: configure.in,v 1.107 2003/10/07 20:07:06 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -60,8 +60,12 @@ AM_CONDITIONAL(HAVE_DOXYGEN, [test -n "$DOXYGEN"])
 dnl ------------------------------------------------------------
 dnl Checks for libraries.
 dnl ------------------------------------------------------------
-AC_CHECK_LIB(socket, socket, NETWORK_LIBS="$NETWORK_LIBS -lsocket")
-AC_CHECK_LIB(nsl, gethostbyname, NETWORK_LIBS="$NETWORK_LIBS -lnsl")
+OLDLIBS="$LIBS"
+LIBS=""
+AC_SEARCH_LIBS(socket, socket)
+AC_SEARCH_LIBS(gethostbyname, nsl)
+NETWORK_LIBS="$LIBS"
+LIBS="$OLDLIBS"
 AC_SUBST(NETWORK_LIBS)
 
 dnl readline test
